# MCDA_5550_market_research_crew

market_research_crew/: .gitignore  README.md  pyproject.toml
market_research_crew/knowledge/: user_preference.txt
market_research_crew/output/: market_research_report.md
market_research_crew/src/market_research_crew/: crew.py  main.py
market_research_crew/src/market_research_crew/config/: agents.yaml  tasks.yaml
market_research_crew/src/market_research_crew/tools/: custom_tool.py  search_tool.py
