[project]
name = "market_research_crew"
version = "0.1.0"
description = "Market_Research_Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.1"
]

[project.scripts]
market_research_crew = "market_research_crew.main:run"
run_crew = "market_research_crew.main:run"
train = "market_research_crew.main:train"
replay = "market_research_crew.main:replay"
test = "market_research_crew.main:test"
run_with_trigger = "market_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
